--- a/app/views/subscribers2/_form.html.erb
+++ b/app/views/subscribers2/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag subscriber_path(1), method: :put do %>
+<%= form_tag subscribers2_path(2), method: :put do %>
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
